# openagent-platform-backend

./: .env.example  .gitignore  Dockerfile  README.md  Start_OpenAgent_API_Visible.bat  Start_OpenAgent_Demo.bat  Start_OpenAgent_Demo_Stable.bat  Start_OpenAgent_Frontend_Visible.bat  Start_OpenAgent_NoVirtualization.bat  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  artifacts.py  cache.py  config.py  db.py  difficulty_analyzer.py  evaluation.py  evaluation_memory.py  failure_context.py  harness_client.py  main.py  models.py  process_manager.py  rate_limit.py  run_queue.py  schemas.py  services.py  time.py  worker.py
benchmark_templates/: benchmark_catalog_15.json  templates.json
docs/: OpenAgent_项目学习知识库_架构技术栈_2026-06-25.md  architecture_diagram.md  backend_design.md  cache_and_rate_limit.md  coding_agent_evaluation.md  deepseek_evidence_workflow.md  demo_evidence.md  demo_walkthrough.md  evaluation_workspace_flow.md  harness_integration.md  interview_playbook_cn.md  one_command_demo.md  sample_benchmark_summary.json  sample_cost_metrics.json  面试演示指南_控制台使用.md  面试统一口径_2026-06-25.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_clean_release.ps1  check_benchmark_templates.ps1  run_deepseek_evidence.ps1  seed_interview_benchmark_evaluations.py  start_demo.ps1
tests/: conftest.py  test_api.py  test_artifacts_and_cache.py  test_config.py  test_difficulty_analyzer.py  test_migrations.py  test_rate_limit.py  test_release_script.py  test_worker.py
(+19 files in other folders)
